# routers/commentsRouter_controllers.go
@@ -7,6 +7,14 @@ import (
 
 func init() {
 
+	beego.GlobalControllerRouter["ReviewService/controllers:QuestionController"] = append(beego.GlobalControllerRouter["ReviewService/controllers:QuestionController"],
+		beego.ControllerComments{
+			Method: "AddQuestion",
+			Router: `/addQuestion`,
+			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
+			Params: nil})
+
 	beego.GlobalControllerRouter["ReviewService/controllers:UserController"] = append(beego.GlobalControllerRouter["ReviewService/controllers:UserController"],
 		beego.ControllerComments{
 			Method: "Login",
