# swagger/swagger.json
@@ -15,6 +15,34 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/question/addQuestion": {
+            "post": {
+                "tags": [
+                    "question"
+                ],
+                "description": "Add question to DB",
+                "operationId": "QuestionController.AddQuestion",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "QuestionBody",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AllQuestion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} Add Success"
+                    },
+                    "403": {
+                        "description": "Add fail"
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "tags": [
@@ -42,7 +70,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/.Question"
+                            "$ref": "#/definitions/models.AllQuestion"
                         }
                     },
                     "403": {
@@ -100,8 +128,45 @@
         }
     },
     "definitions": {
-        ".Question": {
-            "type": "object"
+        "models.AllQuestion": {
+            "title": "AllQuestion",
+            "type": "object",
+            "properties": {
+                "Category": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Details": {
+                    "$ref": "#/definitions/models.QuestionDetails"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
+        "models.QuestionDetails": {
+            "title": "QuestionDetails",
+            "type": "object",
+            "properties": {
+                "Answer": {
+                    "type": "string"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Option": {
+                    "type": "string"
+                },
+                "Question": {
+                    "type": "string"
+                },
+                "QuestionType": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
         }
     },
     "tags": [
